Make sure form behaves correctly on mobile

--- a/src/main/resources/public/styles/app.css
+++ b/src/main/resources/public/styles/app.css
@@ -12,6 +12,7 @@
 body {
     background-image: url("/images/background.png");
     font-family: 'bellotaregular';
+    font-size: 16px;
     color: white;
 }
 
