--- a/src/main/resources/public/styles/rsvps.css
+++ b/src/main/resources/public/styles/rsvps.css
@@ -1,3 +1,15 @@
+input[type=email] {
+    font-size:16px;
+}
+
+input[type=text] {
+    font-size:16px;
+}
+
+input[type=number] {
+    font-size:16px;
+}
+
 .rsvp_form_container {
     max-width: 480px;
     padding-top: 20px;
@@ -15,6 +27,10 @@
     color: white;
 }
 
-#thank-you {
-    margin-top: 120px;
+#rsvp_submit {
+    width: 100%;
+}
+
+#rsvp_guests {
+    width: 64px;
 }
